# supplychaindata.exchange

./: 404.html  README.md  core.md  extensions.md  index.html  sitemap.xml
.github/ISSUE_TEMPLATE/: extensions-proposal-template.md
.github/workflows/: docs.yml  run-tests.yml
assets/js/: 0102986c.7b3ec2a7.js  01a85c17.42969ed0.js  09960970.cbd62982.js  0e384e19.cbe8dd82.js  14eb3368.fb427ab6.js  1538.5b9b2834.js  17896441.66a7d681.js  18c41134.543d8a1b.js  1df93b7f.cba95ce7.js  1e4232ab.640e3841.js  1f391b9e.a4a68600.js  2237.18d22568.js  28317f6f.ca8eb92d.js  3347.52e7bc8b.js  33fc5bb8.e48595db.js  36994c47.98d5c527.js  393be207.0762df15.js  3a41fee7.095798c2.js  410be947.45700474.js  43264e52.155943dd.js  4d744108.a8fe8e59.js  4ed142d3.5f8d6e42.js  533a09ca.b5e41b3f.js  59362658.b383c4e0.js  5c868d36.f1f69a2d.js  5e95c892.abad47ed.js  621db11d.43c2cb70.js  66e07957.4d148bf3.js  6875c492.a1b1dcbf.js  73664a40.f3380165.js  7661071f.7af852bb.js  814f3328.e705865e.js  822bd8ab.f37f802d.js  8717b14a.621dbe63.js  8e442b2e.fd5d9b5c.js  925b3f96.e8bb4c4a.js  (+20 more)
blog/: atom.xml  index.html  rss.xml
examples/: README.md  affiliation-multiple.json  affiliation-single.json  factory-more.json  location-minimum.json  location-more.json  organization-minimum.json  organization-more.json
markdown-page/: index.html
schema/: README.md  core-schema-example.json  core-schema.json  schema.json  schema.md
tests/: .gitignore  pyproject.toml
tests/scdex/: __init__.py
tests/tests/: test_scdex_schema.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json
(+34 files in other folders)
